--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -72,6 +72,7 @@
                 android:layout_height="wrap_content"
                 android:textColor="@color/black"
                 android:text="Name"
+                android:textStyle="bold"
                 android:id="@+id/profile_name"
                 android:textSize="20dp"
                 android:layout_centerHorizontal="true"/>
@@ -82,6 +83,7 @@
                 android:text="Username"
                 android:id="@+id/profile_username"
                 android:textSize="20dp"
+                android:textStyle="italic"
                 android:layout_centerHorizontal="true"
                 android:layout_below="@+id/profile_name"/>
         </RelativeLayout>
