--- a/app/src/main/res/layout/activity_home_screen.xml
+++ b/app/src/main/res/layout/activity_home_screen.xml
@@ -224,11 +224,11 @@
             android:background="@drawable/circle" />
 
         <ImageButton
-            android:id="@+id/setting_btn"
+            android:id="@+id/fav_btn"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:src="@drawable/setting"
+            android:src="@drawable/like_white"
             android:background="@drawable/circle" />
 
     </LinearLayout>
