--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -87,24 +87,7 @@
                 android:layout_centerHorizontal="true"
                 android:layout_below="@+id/profile_name"/>
         </RelativeLayout>
-
-        <androidx.cardview.widget.CardView
-            android:layout_width="match_parent"
-            android:layout_height="200dp"
-            android:layout_margin="10dp"
-            android:id="@+id/favorite_articles">
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Các bài báo ưa thích"
-                    android:layout_centerInParent="true"/>
-            </RelativeLayout>
-        </androidx.cardview.widget.CardView>
-
-
+        
     </LinearLayout>
 
     <LinearLayout
@@ -136,11 +119,11 @@
             android:background="@drawable/circle" />
 
         <ImageButton
-            android:id="@+id/setting_btn_3"
+            android:id="@+id/fav_btn_3"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:src="@drawable/setting"
+            android:src="@drawable/like_white"
             android:background="@drawable/circle" />
 
     </LinearLayout>
