--- a/app/src/main/res/layout/activity_category_item_list.xml
+++ b/app/src/main/res/layout/activity_category_item_list.xml
@@ -72,11 +72,11 @@
             android:background="@drawable/circle" />
 
         <ImageButton
-            android:id="@+id/setting_btn"
+            android:id="@+id/fav_btn_1"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:src="@drawable/setting"
+            android:src="@drawable/like_white"
             android:background="@drawable/circle"/>
     </LinearLayout>
 
