--- a/app/src/main/res/layout-land/activity_register.xml
+++ b/app/src/main/res/layout-land/activity_register.xml
@@ -99,7 +99,7 @@
                 android:layout_below="@+id/register_confirm_password"
                 android:layout_marginTop="27dp"
                 android:backgroundTint="@color/login_button"
-                android:text="LOGIN"
+                android:text="REGISTER"
                 />
 
             <Button
