--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -37,7 +37,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/to_login_button_1"
-            android:text="Đăng nhập"
+            android:text="LOGIN"
             android:backgroundTint="#07BEB8">
         </Button>
 
@@ -45,7 +45,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/to_register_button_1"
-            android:text="Chưa có tài khoản? Đăng kí tại đây.">
+            android:text="Don't have an account? Register here.">
         </TextView>
 
     </LinearLayout>
