--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -64,6 +64,7 @@
             android:layout_margin="10dp"/>
         <TextView
             android:id="@+id/change_profile_photo_button"
+            android:backgroundTint="@color/white"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="30sp"
