--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -89,7 +89,9 @@
             android:id="@+id/fullName_editText"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:textSize="20sp"/>
+            android:textSize="20sp"
+            android:inputType="text"
+            android:imeOptions="actionDone"/>
 
         <TextView
             android:layout_width="wrap_content"
@@ -104,7 +106,8 @@
             android:layout_height="match_parent"
             android:inputType="textEmailAddress"
             android:text="abc@xyz.com"
-            android:textSize="20sp"/>
+            android:textSize="20sp"
+            android:imeOptions="actionDone"/>
 
     </LinearLayout>
 
