--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -77,7 +77,8 @@
         android:layout_below="@id/edit_profile_photo_group"
         android:layout_marginTop="5dp"
         android:layout_marginHorizontal="15dp"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:visibility="visible">
 
         <TextView
             android:layout_width="wrap_content"
@@ -112,12 +113,75 @@
     </LinearLayout>
 
     <Button
-        android:id="@+id/change_password_btn"
+        android:id="@+id/change_password_information_btn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:backgroundTint="#07BEB8"
         android:text="Change password"
         android:layout_below="@id/edit_profile_info_group"/>
+
+    <LinearLayout
+        android:id="@+id/change_password_group"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/change_password_information_btn"
+        android:layout_marginTop="5dp"
+        android:layout_marginHorizontal="15dp"
+        android:orientation="vertical"
+        android:visibility="gone">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Old password"
+            android:textColor="#07BEB8"
+            android:textSize="15sp" />
+        <EditText
+            android:id="@+id/oldPassword_editText"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:textSize="20sp"
+            android:inputType="textPassword"
+            android:imeOptions="actionGo"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="New password"
+            android:textSize="15sp"
+            android:textColor="#07BEB8"
+            android:layout_marginTop="5dp"/>
+        <EditText
+            android:id="@+id/newPassword_editText"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:inputType="textPassword"
+            android:textSize="20sp"
+            android:imeOptions="actionGo"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="confirm new password"
+            android:textSize="15sp"
+            android:textColor="#07BEB8"
+            android:layout_marginTop="5dp"/>
+        <EditText
+            android:id="@+id/confirmPassword_editText"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:inputType="textPassword"
+            android:textSize="20sp"
+            android:imeOptions="actionDone"/>
+        <Button
+            android:id="@+id/apply_change_password_btn"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:backgroundTint="#07BEB8"
+            android:layout_marginHorizontal="130dp"
+            android:text="apply"/>
+
+    </LinearLayout>
+
 
     <Button
         android:id="@+id/logout_button"
